[macOS Debug wk2] ASSERTION FAILED: !m_messageReceiverMapCount in webrtc tests rdar://140302668 https://bugs.webkit.org/show_bug.cgi?id=283445

Reviewed by Chris Dumez.

RemoteRemoteCommandListener is already fast malloced so does not need to be TZone malloced.
This seems to confuse our weak pointer implementation, which makes RemoteRemoteCommandListener no longer always receives GPUProcessConnection close notifications.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/WebProcess/GPU/media/RemoteRemoteCommandListener.cpp:
* Source/WebKit/WebProcess/GPU/media/RemoteRemoteCommandListener.h:

Canonical link: https://commits.webkit.org/286967@main